--- a/applist.json
+++ b/applist.json
@@ -1,8 +1,8 @@
 {
-    "brewapplist": ["httpie", "git", "awscli", "httpie", "nvm", "openssl@1.1", "python", "sqlite", "gdbm", "icu4c", "openssl", "pipenv", "readline", "xz"],
+    "brewapplist": ["httpie", "jq", "git", "awscli", "httpie", "nvm", "openssl@1.1", "python", "sqlite", "gdbm", "icu4c", "openssl", "pipenv", "readline", "xz"],
 
     "brewcaskapplist": ["docker", "google-chrome", "keeweb", "postman", "powershell", "slack"],
     
-    "yumapplist": ["nano", "python3-pip.noarch", "python3.x86_64", "centos-release-scl"]
+    "yumapplist": ["nano", "python3-pip.noarch", "python3.x86_64", "centos-release-scl", "wget"]
     
 }
