using jq to filter my arrays

--- a/applist.json
+++ b/applist.json
@@ -1,8 +1,36 @@
 {
-    "brewapplist": ["httpie", "jq", "git", "awscli", "httpie", "nvm", "openssl@1.1", "python", "sqlite", "gdbm", "icu4c", "openssl", "pipenv", "readline", "xz"],
-
-    "brewcaskapplist": ["docker", "google-chrome", "keeweb", "postman", "powershell", "slack"],
+    "brewapplist": [   
+      "httpie",
+      "jq",
+      "git",
+      "awscli",
+      "httpie",
+      "nvm",
+      "openssl@1.1",
+      "python",
+      "sqlite",
+      "gdbm",
+      "icu4c",
+      "openssl",
+      "pipenv",
+      "readline",
+      "xz"
+      ],
     
-    "yumapplist": ["nano", "python3-pip.noarch", "python3.x86_64", "centos-release-scl", "wget"]
-    
+      "brewcaskapplist": [
+      "docker",
+      "google-chrome",
+      "keeweb",
+      "postman",
+      "powershell",
+      "slack"
+    ],
+      "yumapplist": [
+      "wget",
+      "ruby",
+      "nano",
+      "python3-pip.noarch",
+      "python3.x86_64",
+      "centos-release-scl"
+    ]
 }
