--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
-Untitled.code-workspace
-build.sh
-dockerfile
-install_and_deploy_agnostic_OS.py
-MakeFile
+.Untitled.code-workspace
+.build.sh
+.dockerfile
+.install_and_deploy_agnostic_OS.py
+.MakeFile
